<resources>
    <string name="app_name">HomeBook Lite</string>
    <string name="app_name_short">HBLite</string>
    <string name="home">Home</string>
    <string name="favourite">Favourite</string>
    <string name="reservation">Reservation</string>
    <string name="property">Property</string>
    <string name="signout">Sign Out</string>
    <string name="login">Log In</string>
    <string name="register">Register</string>
    <string name="signup">Sign Up</string>
    <string name="password">Password</string>
    <string name="password_again">Password Again</string>
    <string name="forget_password">Forget Password</string>
    <string name="birthday">Birthday</string>
    <string name="collaborate">Collaborate</string>
    <string name="member">Member</string>
    <string name="search">Search</string>
    <string name="fullname">Fullname</string>
    <string name="mobile_phone">Mobile Phone</string>
    <string name="goingsomewhere"><b>GOING SOMEWHERE?</b></string>
    <string name="accept_license">Accept all license.</string>
    <string name="available">Available</string>
    <string name="clickhere">Click Here</string>
    <string name="remember">Remember</string>
    <string name="haveaccount">You have a account?</string>
    <string name="donthaveaccount">You don\'t have a account?</string>
    <string name="wwultg">Where Would You\nLike To Go ?</string>
    <string name="mostbooking">Most Booking</string>
    <string name="top">Top</string>
    <string name="create">Create</string>
    <string name="update">Update</string>
    <string name="all">All</string>
    <string name="nothing">It\'s nothing here.\nAdd now.</string>
    <string name="nothing2">It\'s nothing here.</string>

    <!--Property-->
    <string name="hotel">Hotel</string>
    <string name="motel">Motel</string>
    <string name="homestay">Homestay</string>
    <string name="apartment">Apartment</string>
    <string name="villa">Villa</string>
    <string name="resort">Resort</string>
    <string name="newproperty">New Property</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="address">Address</string>
    <string name="district">District</string>
    <string name="type">Type</string>
    <string name="province">Province</string>
    <string name="country">Country</string>
    <string name="amenities">Amenities</string>
    <string name="rating">Rating</string>
    <string name="owner">Owner</string>
    <string name="policy">Policy</string>
    <string name="checktime">Check In/Out Time</string>
    <string name="checkin">Check In</string>
    <string name="checkout">Check Out</string>
    <string name="booking">Booking</string>
    <string name="select">Select</string>
    <string name="date">Date</string>

    <!--    room-->
    <string name="newroom">New Room</string>
    <string name="editroom">Edit Room</string>
    <string name="bed">Bed</string>
    <string name="people">People</string>
    <string name="size">Size</string>
    <string name="size2">Size (m2)</string>
    <string name="room">Room</string>
    <string name="room2">How many rooms?</string>
    <string name="price">Price</string>
    <string name="price2">Price\/Night (VNĐ)</string>
    <string name="perroompernight">\/ Room\/ Night</string>
    <string name="only">Only</string>
    <string name="typeofroom">Type of Room</string>
    <string name="qualityofroom">Quality of Room</string>

    <!--    reservation-->
    <string name="customer"><u>Customer</u></string>
    <string name="property2"><u>Property</u></string>
    <string name="room3"><u>Room</u></string>
    <string name="namecustomer">Name of Customer</string>
    <string name="phonecustomer">Phone of Customer</string>
    <string name="emailcustomer">Email of Customer</string>
    <string name="idcustomer">Citizen Identification of Customer</string>
    <string name="nameproperty">Name of Property</string>
    <string name="addressproperty">Address of Property</string>
    <string name="checkindate">Check In Date</string>
    <string name="checkoutdate">Check Out Date</string>
    <string name="numberroom">Number of Rooms</string>
    <string name="numbercustomer">Number of Customers</string>
    <string name="numbernight">Number of Nights</string>
    <string name="totalcost">Total Costs</string>
    <string name="status">Status</string>
    <string name="seemore">- - -   See More   - - -</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="dieuKhoan" translatable="false">Thỏa thuận Google Apps (miễn phí) này ("Thỏa thuận") này được lập bởi và giữa Google Inc.,
        một công ty Delaware, có văn phòng tại 1600 Amphitheatre Parkway, Mountain View, California 94043 ("Google")
        và tổ chức đồng ý với những điều khoản này ("Khách hàng"). Thỏa thuận này điều chỉnh quyền truy cập và sử dụng
        Dịch vụ của Khách hàng và sẽ có hiệu lực kể từ Ngày bắt đầu có hiệu lực. Thỏa thuận này có hiệu lực kể từ ngày
        Khách hàng nhấp vào nút "Tôi chấp nhận" dưới đây ("Ngày bắt đầu có hiệu lực"). Nếu bạn chấp nhận thay mặt cho
        Khách hàng, bạn đại diện và đảm bảo rằng: (i) bạn có đầy đủ quyền hạn pháp lý để ràng buộc chủ lao động của mình
        hoặc tổ chức hiện hành với những điều khoản và điều kiện này (ii) bạn đã đọc và hiểu rõ Thỏa thuận này; và (iii)
        bạn đồng ý, thay mặt cho bên mà bạn đại diện, với Thỏa thuận này. Nếu bạn không có quyền hạn pháp lý để ràng buộc
        Khách hàng, xin vui lòng không nhấp vào nút "Tôi chấp nhận" bên dưới. Thỏa thuận này điều chỉnh quyền truy cập và
        sử dụng Dịch vụ của Khách hàng.</string>

</resources>