<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/dHome"
            android:title="@string/home"
            android:icon="@drawable/ic_home1_24"/>

        <item
            android:id="@+id/dFavorite"
            android:title="@string/favourite"
            android:icon="@drawable/ic_favourite_24"/>

        <item
            android:id="@+id/dReservation"
            android:title="@string/reservation"
            android:icon="@drawable/ic_paper_24"/>

        <item
            android:id="@+id/dProperty"
            android:title="@string/property"
            android:icon="@drawable/ic_home2_24"/>

        <item
            android:id="@+id/dOut"
            android:title="@string/signout"
            android:icon="@drawable/ic_out_24"/>
    </group>
</menu>