<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    app:cardCornerRadius="20dp"
    tools:context=".roomActivity.AddVillaFragment">

    <LinearLayout
        style="@style/match"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/newroom"
            android:textAllCaps="true" />

        <LinearLayout
            style="@style/parent"
            android:weightSum="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/typeofroom"
                android:gravity="center"
                android:textSize="18dp"/>

            <Spinner
                android:id="@+id/typeRoomUp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="2"
                android:spinnerMode="dialog"/>

        </LinearLayout>

        <LinearLayout
            style="@style/parent"
            android:weightSum="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/qualityofroom"
                android:gravity="center"
                android:textSize="18dp"/>

            <Spinner
                android:id="@+id/qualityRoomUp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="2"
                android:spinnerMode="dialog"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/propertyRoomUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:backgroundTint="@color/primary"
                android:hint="Property"
                android:enabled="false"
                android:paddingVertical="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            style="@style/parent"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:weightSum="4">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sizeRoomUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    android:hint="@string/size2"
                    android:inputType="number"
                    android:paddingVertical="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/bedRoomUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    android:hint="@string/bed"
                    android:inputType="number"
                    android:paddingVertical="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/roomRoomUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    android:hint="@string/room"
                    android:inputType="number"
                    android:paddingVertical="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/peopleRoomUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/primary"
                    android:hint="@string/people"
                    android:inputType="number"
                    android:paddingVertical="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amenitiesRoomUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:backgroundTint="@color/primary"
                    android:hint="@string/amenities"
                    android:paddingVertical="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/priceRoomUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:backgroundTint="@color/primary"
                    android:hint="@string/price2"
                    android:inputType="number"
                    android:paddingVertical="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="5dp">

            <CheckBox
                android:id="@+id/checkAcceptP"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/accept_license" />

            <TextView
                android:id="@+id/clickForDetailsP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/clickhere" />

        </LinearLayout>


        <Button
            android:id="@+id/createRoomUp"
            style="@style/button"
            android:layout_marginVertical="15dp"
            android:text="@string/create" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
