<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    app:cardCornerRadius="20dp"
    tools:context=".propertyActivity.AddPropertyFragment">

    <LinearLayout
        style="@style/match"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/headerTextPrimary"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="30dp"
            android:text="@string/newproperty"
            android:textAllCaps="true" />

        <com.google.android.material.textfield.TextInputLayout style="@style/parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/namePropertyUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:backgroundTint="@color/primary"
                android:hint="Name"
                android:paddingVertical="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            style="@style/parent"
            android:weightSum="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/type"
                android:gravity="center"
                android:textSize="18dp"/>

            <Spinner
                android:id="@+id/typePropertyUp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="2"
                android:spinnerMode="dialog"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout style="@style/parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/addressPropertyUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:backgroundTint="@color/primary"
                android:hint="@string/address"
                android:paddingVertical="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

<!--        <LinearLayout-->
<!--            style="@style/parent"-->
<!--            android:weightSum="3"-->
<!--            android:orientation="horizontal">-->

<!--            <TextView-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="1"-->
<!--                android:text="@string/country"-->
<!--                android:gravity="center"-->
<!--                android:textSize="18dp" />-->

<!--            <Spinner-->
<!--                android:id="@+id/countryPropertyUp"-->
<!--                android:layout_width="0dp"-->
<!--                android:layout_height="match_parent"-->
<!--                android:layout_weight="2"-->
<!--                android:layout_marginHorizontal="15dp"-->
<!--                android:layout_marginVertical="8dp"-->
<!--                android:spinnerMode="dialog"/>-->

<!--        </LinearLayout>-->

        <LinearLayout
            style="@style/parent"
            android:weightSum="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/province"
                android:gravity="center"
                android:textSize="18dp"/>

            <Spinner
                android:id="@+id/provincePropertyUp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="2"
                android:spinnerMode="dialog"/>

        </LinearLayout>

        <LinearLayout
            style="@style/parent"
            android:weightSum="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/district"
                android:gravity="center"
                android:textSize="18dp"/>

            <Spinner
                android:id="@+id/districtPropertyUp"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="2"
                android:spinnerMode="dialog"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="3">

            <com.google.android.material.textfield.TextInputLayout
                style="@style/parent"
                android:layout_weight="1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amenitiesPropertyUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:backgroundTint="@color/primary"
                    android:hint="@string/amenities"
                    android:paddingVertical="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/descriptionPropertyUp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:layout_marginVertical="5dp"
                    android:backgroundTint="@color/primary"
                    android:hint="@string/description"
                    android:paddingVertical="10dp" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            style="@style/parent"
            android:weightSum="3"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/rating"
                android:gravity="center"
                android:textSize="18dp"/>

            <RatingBar
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:layout_weight="2"
                android:numStars="5"
                android:stepSize="1"
                android:id="@+id/starPropertyUp"/>

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/ownerPropertyUp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:layout_marginVertical="5dp"
                android:backgroundTint="@color/primary"
                android:enabled="false"
                android:hint="@string/owner"
                android:paddingVertical="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="15dp"
            android:layout_marginVertical="5dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingVertical="5dp">

            <CheckBox
                android:id="@+id/checkAcceptP"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/accept_license" />

            <TextView
                android:id="@+id/clickForDetailsP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:text="@string/clickhere" />

        </LinearLayout>


        <Button
            android:id="@+id/createPropertyUp"
            style="@style/button"
            android:layout_marginVertical="15dp"
            android:text="@string/create" />

    </LinearLayout>
</androidx.cardview.widget.CardView>
